# RAG-Model

./: .gitignore  1.0_Rag_With_Own_Text.ipynb  2.0_RAG_PDF.ipynb  README.md  pyproject.toml  requirements.txt
